Modern CMake usage: reworked to use target-specific properties.
Please note that this is not exactly backwards compatible, but if you
are using this library through Magnum, nothing should change for you,
hopefully. In any case, recreate the build dir and update your copy of
Find*.cmake modules to avoid weird things happening.

User-facing changes:

 * Documentation of Find*.cmake modules converted to reStructuredText to
   follow official CMake guidelines.
 * The finding process is now componented to avoid future splitting. So
   to make any use of the library, you have to specify at least one of
   Containers, TestSuite, Utility, rc or PluginManager components.
 * The newfangled way to use the libraries is to use Corrade::Utility
   instead of ${CORRADE_UTILITY_LIBRARIES} and
   ${CORRADE_UTILITY_INCLUDE_DIRS}. The ${CORRADE_*_LIBRARIES} are
   deprecated and now expand to Corrade::*. They are exposed only if
   building with BUILD_DEPRECATED. The ${CORRADE_*_INCLUDE_DIRS} are
   removed, as linking to Corrade::* handles that implicitly.
 * Dropped support for OSX 10.8 and older. OSX 10.9 switched to using
   libc++ by default so we expect that to be done implicitly. If you are
   still on older version, add "-stdlib=libc++" to CMAKE_CXX_FLAGS and
   "-lc++" to CMAKE_EXE_LINKER_FLAGS.
 * Setting up C++11 support is no longer done globally on the
   CMAKE_CXX_FLAGS variable, but rather via new custom properties
   CORRADE_USE_CXX11 and INTERFACE_CORRADE_USE_CXX11.
   INTERFACE_CORRADE_USE_CXX11 is set on all Corrade targets so you get
   C++11 support every time you link to any Corrade library.
 * ${CORRADE_CXX_FLAGS} are deprecated, use CORRADE_USE_PEDANTIC_FLAGS
   target property instead.
 * Added new Corrade::rc target which replaces the old
   ${CORRADE_RC_EXECUTABLE}. That variable is deprecated and just
   expands to the target now.
 * The Corrade::Containers target works only on CMake 3.0+, because it
   is an header-only library. However, it is listed as a 

--- a/doc/namespaces.dox
+++ b/doc/namespaces.dox
@@ -30,11 +30,8 @@
 @brief Root namespace
 
 Root namespace alone doesn't contain any functionality, see subnamespaces for
+more information. See also @ref building-corrade and @ref corrade-cmake for
 more information.
-
-To use any of the libraries, you need to add `${CORRADE_INCLUDE_DIRS}` to
-include path. See also @ref building-corrade and @ref corrade-cmake for more
-information.
 */
 
 /** @dir Corrade/Containers
@@ -45,8 +42,9 @@ information.
 
 Implementations for various containers which don't have equivalents in STL.
 
-To use this library, you need to link to `${CORRADE_CONTAINERS_LIBRARIES}`. See
-also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `Containers` component of `Corrade`
+package in CMake and link to `Corrade::Containers` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
 
 /** @dir Corrade/Utility
@@ -61,8 +59,9 @@ access to configuration files (class Configuration), on which is based
 translation support (class Translator) or compiling data files into the
 executable (class Resource, see also @ref resource-management "tutorial").
 
-To use this library, you need to link to `${CORRADE_UTILITY_LIBRARIES}`. See
-also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `Utility` component of `Corrade`
+package in CMake and link to `Corrade::Utility` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
 
 /** @dir Corrade/PluginManager
@@ -76,8 +75,9 @@ and instancing plugins. There is also an AbstractPlugin class, which is the base
 of all plugins. See @ref plugin-management for a brief introduction to how
 plugins work.
 
-To use this library, you need to link to `${CORRADE_PLUGINMANAGER_LIBRARIES}`.
-See also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `PluginManager` component of `Corrade`
+package in CMake and link to `Corrade::PluginManager` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
 
 /** @dir Corrade/Interconnect
@@ -89,8 +89,9 @@ See also @ref building-corrade and @ref corrade-cmake for more information.
 This library allows you to interconnect objects. See @ref interconnect for more
 information.
 
-To use this library, you need to link to `${CORRADE_INTERCONNECT_LIBRARIES}`.
-See also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `Interconnect` component of `Corrade`
+package in CMake and link to `Corrade::Interconnect` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
 
 /** @dir Corrade/TestSuite
@@ -101,8 +102,9 @@ See also @ref building-corrade and @ref corrade-cmake for more information.
 
 Unit testing framework. See @ref unit-testing for more information.
 
-To use this library, you need to link to `${CORRADE_TESTSUITE_LIBRARIES}`.
-See also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `TestSuite` component of `Corrade`
+package in CMake and link to `Corrade::TestSuite` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
 
 /** @dir Corrade/TestSuite/Compare
@@ -114,6 +116,7 @@ See also @ref building-corrade and @ref corrade-cmake for more information.
 See @ref CORRADE_COMPARE_AS(), @ref CORRADE_COMPARE_WITH() and @ref Comparator
 for more information.
 
-To use this library, you need to link to `${CORRADE_TESTSUITE_LIBRARIES}`.
-See also @ref building-corrade and @ref corrade-cmake for more information.
+To use this library, you need to request `TestSuite` component of `Corrade`
+package in CMake and link to `Corrade::TestSuite` target. See also
+@ref building-corrade and @ref corrade-cmake for more information.
 */
